--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
              <p><strong>história de Street Fighter</strong></p>
-                   A série Street Fighter foi criada nos fliperamas com seu primeiro jogo: Street Fighter,
-                lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.
+                <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas com seu primeiro jogo: <strong>Street Fighter</strong>,
+                lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
 
-                O protagonista era Ryu, o qual enfrentava vários adversários em sequência para vencer o torneio Street Fighter.
-                Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.
-
+                <p>O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários em sequência para vencer o <strong>torneio Street Fighter</strong>.</p>
+                <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
