--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-             <p><strong>história de Street Fighter</strong></p>
+<!DOCTYPE html>     
+<html lang=pt-br>  
+   <meta charset="UTF-8"  
+   <title.História de Street Fighter</title>
+               <h1><strong>História de Street Fighter</strong></h1>
                 <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas com seu primeiro jogo: <strong>Street Fighter</strong>,
                 lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
-
-                <p>O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários em sequência para vencer o <strong>torneio Street Fighter</strong>.</p>
+                <p>O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários em sequência para vencer o <strong><em>"Torneio Street Fighter".</p><em></strong>
                 <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
+</html>
