--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas com seu primeiro jogo: <strong>Street Fighter</strong>,
    lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
    <p>O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários em sequência para vencer o <strong><em>"Torneio Street Fighter".</p><em></strong>
-   <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
+   <p style="font-size: 19px;"><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 </body>
    </html>
