--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>  
-<html lang=pt-br>  
+<html lang=pt-br>
+   <style>
+      p {
+         text-align: center
+      }
+   </style> 
 <head>
    <meta charset="UTF-8"  
    <title.História de Street Fighter</title>
 </head>
 <body>
-   <h1><strong>História de Street Fighter</strong></h1>
-   <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas com seu primeiro jogo: <strong>Street Fighter</strong>,
+   <h1 style="text-align:center"><strong>História de Street Fighter</strong></h1>
+
+   <p style="text-align:center">A série <strong>Street Fighter</strong> foi criada nos fliperamas
+       com seu primeiro jogo: <strong>Street Fighter</strong>,
    lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
-   <p>O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários em sequência para vencer o <strong><em>"Torneio Street Fighter".</p><em></strong>
-   <p style="font-size: 19px;"><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
+   <p style="text-align:center">O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários
+   em sequência para vencer o <strong><em>"Torneio Street Fighter".</p><em></strong>
+   <p style="font-size: 19px; text-align:center"><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 </body>
    </html>
