--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
    <meta charset="UTF-8">
    <title>História de Street Fighter</title>
    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-   <h1 style="text-align: center"><strong>História de Street Fighter</strong></h1>
+   <h1>História de Street Fighter</h1>
 
-   <p style="text-align: center">A série <strong>Street Fighter</strong> foi criada nos fliperamas
+   <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
        com seu primeiro jogo: <strong>Street Fighter</strong>,
    lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
-   <p id="missão" style="text-align: center">O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários
-   em sequência para vencer o <strong><em>"Torneio Street Fighter".</p><em></strong>
-   <p style="text-align: center"><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
+   <p id="missão">O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários
+   em sequência para vencer o <strong>"Torneio Street Fighter".</p></strong>
+   <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 </body>
    </html>
