--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
        com seu primeiro jogo: <strong>Street Fighter</strong>,
    lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
    <p id="missão">O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários
-   em sequência para vencer o <strong>"Torneio Street Fighter".</p></strong>
+   em sequência para vencer o <strong>"Torneio Street Fighter"</strong>.</p>
    <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
+
+   <a href="https://www.streetfighter.com/">Acesse a página oficial aqui</a>
+
 </body>
    </html>
