--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+   <img 
+   
    <h1>História de Street Fighter</h1>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
