--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-   <img 
+   <img id="banner" src="street.png" 
    
-   <h1>História de Street Fighter</h1>
+   <h1><p font-size; 20px>História de Street Fighter</p></h1>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
        com seu primeiro jogo: <strong>Street Fighter</strong>,
@@ -19,7 +19,7 @@
    em sequência para vencer o <strong>"Torneio Street Fighter"</strong>.</p>
    <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 
-   <a href="https://www.streetfighter.com/">Acesse a página oficial aqui</a>
+   <a href=https://www.buscape.com.br/console-de-video-game/conteudo/street-fighter>Acesse a página oficial aqui</a>
 
 </body>
    </html>
