--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-   <img id="banner" src="street.png" 
-   
-   <h1><p font-size; 20px>História de Street Fighter</p></h1>
+   <img id="banner" src="download.html" 
+</body>
+   <p><h1 font-size; 20px>História de Street Fighter</h1></body></html></p>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
        com seu primeiro jogo: <strong>Street Fighter</strong>,
