--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
    <link rel="stylesheet" href="style.css">
 
 </head>
-  
-
+   <header>
+       <h1>Colar e copiar e errado</h1>
+       <ul>
+           <li>Escola</li>
+           <li>Estudante</li>
+       </ul>
+   </header>
    <img id="banner" src="download.html" 
 
    <p><h1 font-size; 20px>História de Street Fighter</h1></body></html></p>
