--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>  
-<html lang="pt-br">
-   <body>
-<head>
+<html lang="en">
+   <body>      <header>
+      <h1>Colar e copiar e errado</h1>
+      <ul>
+          <li>*street-fighter</li>
+          <li>*Fake news</li>
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </ul>
+  </header>
+</body>
+   <head>
    <meta charset="UTF-8">
+   
    <title>História de Street Fighter</title>
    <link rel="stylesheet" href="style.css">
 
-</head>
-   <header>
-       <h1>Colar e copiar e errado</h1>
-       <ul>
-           <li>Escola</li>
-           <li>Estudante</li>
-       </ul>
-   </header>
-   <img id="banner" src="download.html" 
 
-   <p><h1 font-size; 20px>História de Street Fighter</h1></body></html></p>
+   <img id="banner" src="download.html" 
+   <h1 font-size; 20px>História de Street Fighter</h1></body></html>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
        com seu primeiro jogo: <strong>Street Fighter</strong>,
@@ -25,7 +26,6 @@
    em sequência para vencer o <strong>"Torneio Street Fighter"</strong>.</p>
    <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 
-   <a href=https://www.buscape.com.br/console-de-video-game/conteudo/street-fighter>Acesse a página oficial aqui</a>
-
-</body>
+   <a href=>Acesse a página oficial aqui</a>
+   </head>
    </html>
