--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  
 <html lang="en">
    <body>      <header>
-      <h1>Colar e copiar e errado</h1>
+      <img src="" alt="logo de street-fighter">
       <ul>
           <li>*street-fighter</li>
           <li>*Fake news</li>
