--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>  
 <html lang="en">
-   <body>      <header>
+   <body>      
+    <header>
       <img src="" alt="logo de street-fighter">
       <ul>
           <li>*street-fighter</li>
