--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <body>      
     <header>
-      <img src="" alt="logo de street-fighter">
+      <img class="cabeçalho" "src="download.pn" alt="logo de street-fighter">
       <ul>
           <li>*street-fighter</li>
           <li>*Fake news</li>
@@ -14,9 +14,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=0.2">
    <title>História de Street Fighter</title>
    <link rel="stylesheet" href="style.css">
-
-
-   <img id="banner" src="download.html" 
    <h1 font-size; 20px>História de Street Fighter</h1></body></html>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
