--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <body>      
     <header>
-      <img class="cabeçalho" "src="download.pn" alt="logo de street-fighter">
+      <img class="cabeçalho" src="download.pg" alt="logo de street-fighter">
       <ul>
           <li>*street-fighter</li>
           <li>*Fake news</li>
