--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
    <body>      
     <header>
-      <img class="cabeçalho" src="Street_Fighter_Logo.png" alt="logo de street-fighter">
-      <ul>
-          <li>*street-fighter</li>
-          <li>*Fake news</li>
-      </ul>
+        <ul class="Cabeçalho">
+            <li class="cabeçalho-titulo"><strong><f>Street-Fighter</f><strong/></li>
+        </ul>
+      <img class="cabeçalho-imagem" src="download.png" alt="logo de street-fighter">
   </header>
 </body>
    <head>
@@ -14,7 +13,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=0.2">
    <title>História de Street Fighter</title>
    <link rel="stylesheet" href="style.css">
-   <h1 font-size; 20px>História de Street Fighter</h1></body></html>
 
    <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
        com seu primeiro jogo: <strong>Street Fighter</strong>,
@@ -23,6 +21,6 @@
    em sequência para vencer o <strong>"Torneio Street Fighter"</strong>.</p>
    <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
 
-   <a href=>Acesse a página oficial aqui</a>
+   <a href=https://www.buscape.com.br/console-de-video-game/conteudo/street-fighter>Clone</a>
    </head>
    </html>
