--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>  
 <html lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.2">
+    <link rel="stylesheet" href="style.css">
    <body>      
     <header>
         <ul class="Cabeçalho">
-            <li class="cabeçalho-titulo"><strong><f>Street-Fighter</f><strong/></li>
+            <li class="cabeçalho-titulo">Street-Fighter</li>
         </ul>
-      <img class="cabeçalho-imagem" src="download.png" alt="logo de street-fighter">
+      <img class="cabeçalho-img"src="logo.png"alt="logo de street-fighter">
   </header>
+  <a href="https://www.buscape.com.br/console-de-video-game/conteudo/street-fighter">link</a>
 </body>
    <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=0.2">
    <title>História de Street Fighter</title>
-   <link rel="stylesheet" href="style.css">
-
-   <p>A série <strong>Street Fighter</strong> foi criada nos fliperamas
-       com seu primeiro jogo: <strong>Street Fighter</strong>,
-   lançado em 1987. Esta versão já trazia um jogo de luta, porém bem diferente do que conhecemos.</p>
-   <p id="missão">O protagonista era <strong>Ryu</strong>, o qual enfrentava vários adversários
-   em sequência para vencer o <strong>"Torneio Street Fighter"</strong>.</p>
-   <p><em>Jogos de luta naquela época ainda não ofereciam escolha livre de personagens.</em></p>
-
-   <a href=https://www.buscape.com.br/console-de-video-game/conteudo/street-fighter>Clone</a>
    </head>
    </html>
